fix: scrollbar style

--- a/src/pages/xswitch/xswitch.less
+++ b/src/pages/xswitch/xswitch.less
@@ -1,3 +1,11 @@
+::-webkit-scrollbar {
+  display: none;
+}
+
+::-webkit-scrollbar-thumb {
+  display: none;
+}
+
 .xswitch-wrapper {
   display: flex;
   overflow: hidden;
@@ -67,6 +75,7 @@
   align-items: baseline;
   flex-direction: column;
   height: 100vh;
+  border-right: 1px solid #bfbfbf;
 }
 
 .toolbar-area {
